# sigfox-cli

./: .gitignore  README.md  pyproject.toml
src/sigfox/: __init__.py  client.py  exceptions.py  sigfox.py
src/sigfox/api/: __init__.py  api_users.py  base_stations.py  contract_infos.py  coverages.py  device_types.py  devices.py  groups.py  operators.py  profiles.py  users.py
src/sigfox/models/: __init__.py  api_user.py  base_station.py  contract_info.py  coverage.py  device.py  device_type.py  group.py  message.py  operator.py  pagination.py  profile.py  user.py
src/sigfox_cli/: app.py  client.py  config.py  exceptions.py  output.py
src/sigfox_cli/commands/: __init__.py  api_users.py  base_stations.py  config_cmd.py  contract_infos.py  coverages.py  device_types.py  devices.py  groups.py  operators.py  profiles.py  users.py
src/sigfox_cli/models/: device.py  device_type.py  message.py
tests/: test_api_users.py  test_api_users_api.py  test_base_stations_api.py  test_client.py  test_client_put_delete.py  test_config.py  test_contract_infos.py  test_contract_infos_api.py  test_coverages.py  test_coverages_api.py  test_device_types.py  test_devices.py  test_groups.py  test_groups_api.py  test_operators.py  test_operators_api.py  test_profiles.py  test_profiles_api.py  test_users.py  test_users_api.py
