[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sigfox-cli"
version = "0.1.0"
description = "CLI tool for Sigfox API v2"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.0",
    "httpx>=0.28.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "rich>=13.0.0",
    "tomli-w>=1.1.0",
]

[project.scripts]
sigfox = "sigfox_cli.app:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "respx>=0.22.0",
    "pytest-cov>=6.0",
    "mypy>=1.14",
]

[tool.hatch.build.targets.wheel]
packages = ["src/sigfox", "src/sigfox_cli"]

[tool.uv]
package = true
